# threads-cpp-project

./: .gitignore  CMakeLists.txt  README.md
include/: client.h
src/: client.cpp  main.cpp
